# Catogdocumentanalysis

./: .env.example  INSTALL_LOCAL_AI.md  LICENSE  README.md  docker-compose.yml  guide.md  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
lobstertrap-main/internal/inspector/: inspector.go  patterns.go  risk.go
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
src-tauri/src/: google_auth.rs  knowledge_base.rs  knowledge_graph.rs  lib.rs
src/components/: AgentChat.tsx  AnalysisResults.tsx  ApplyFixesModal.tsx  ConfigurationModal.tsx  Diagram.tsx  DocumentModal.tsx  FileBrowserModal.tsx  KnowledgeBaseFilesModal.tsx  KnowledgeGraphModal.tsx  LoopTypewriter.tsx  ReportFormatModal.tsx  Terminal.tsx  VisionCaptureModal.tsx  WorkflowHistoryModal.tsx
src/lib/: agentConfig.ts  analysisGraph.ts  analysisHistoryStorage.ts  appConfigStorage.ts  embeddingModels.ts  fileContent.ts  mermaidChart.ts  runtime.ts  systemLogger.ts  visionModels.ts
src/services/: agentChat.ts  agentProviders.ts  aiAgents.ts  documentLayoutDetector.ts  geminiModels.ts  knowledgeBase.ts  knowledgeGraph.ts  reportGenerator.ts  vision.ts
