[package]
name = "app"
version = "0.1.0"
description = "CATOG Intelligent Enterprise Solution desktop shell"
authors = ["Copilot"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
base64 = "0.22"
open = "5.3"
rand = "0.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
sha2 = "0.10"
url = "2.5"
uuid = { version = "1.18.1", features = ["v5"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
